syntax = "proto3";

package ipam.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

// HostGroupStatus defines the status of a host group
enum HostGroupStatus {
  HOST_GROUP_STATUS_UNSPECIFIED = 0;
  HOST_GROUP_STATUS_ACTIVE = 1;
  HOST_GROUP_STATUS_INACTIVE = 2;
}

// HostGroup represents a logical grouping of devices by function or purpose
message HostGroup {
  // Unique identifier
  optional string id = 1 [json_name = "id"];

  // Tenant ID for multi-tenancy
  optional uint32 tenant_id = 2 [json_name = "tenantId"];

  // Human-readable name
  optional string name = 3 [json_name = "name"];

  // Optional description
  optional string description = 4 [json_name = "description"];

  // Group status
  optional HostGroupStatus status = 5 [json_name = "status"];

  // Number of members in this group (computed)
  optional int32 member_count = 6 [json_name = "memberCount"];

  // Custom tags (JSON)
  optional string tags = 20 [json_name = "tags"];

  // Custom metadata (JSON)
  optional string metadata = 21 [json_name = "metadata"];

  // Creation timestamp
  optional google.protobuf.Timestamp created_at = 30 [json_name = "createdAt"];

  // Last update timestamp
  optional google.protobuf.Timestamp updated_at = 31 [json_name = "updatedAt"];

  // Creator user ID
  optional uint32 created_by = 32 [json_name = "createdBy"];

  // Last updater user ID
  optional uint32 updated_by = 33 [json_name = "updatedBy"];
}

// HostGroupMember represents a device member of a host group
message HostGroupMember {
  // Unique identifier
  optional string id = 1 [json_name = "id"];

  // Host Group ID
  optional string host_group_id = 2 [json_name = "hostGroupId"];

  // Device ID
  optional string device_id = 3 [json_name = "deviceId"];

  // Device name (populated from device)
  optional string device_name = 4 [json_name = "deviceName"];

  // Device type (populated from device)
  optional int32 device_type = 5 [json_name = "deviceType"];

  // Device status (populated from device)
  optional int32 device_status = 6 [json_name = "deviceStatus"];

  // Device primary IP (populated from device)
  optional string device_primary_ip = 7 [json_name = "devicePrimaryIp"];

  // Order/sequence in the group
  optional int32 sequence = 10 [json_name = "sequence"];

  // Creation timestamp
  optional google.protobuf.Timestamp created_at = 30 [json_name = "createdAt"];

  // Last update timestamp
  optional google.protobuf.Timestamp updated_at = 31 [json_name = "updatedAt"];
}

// CreateHostGroupRequest creates a new host group
message CreateHostGroupRequest {
  optional uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];

  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255,
    (google.api.field_behavior) = REQUIRED
  ];

  optional string description = 3 [json_name = "description"];
  optional HostGroupStatus status = 4 [json_name = "status"];
  optional string tags = 5 [json_name = "tags"];
  optional string metadata = 6 [json_name = "metadata"];

  // Initial device IDs to add to the group
  repeated string device_ids = 10 [json_name = "deviceIds"];
}

message CreateHostGroupResponse {
  HostGroup host_group = 1 [json_name = "hostGroup"];
}

// GetHostGroupRequest retrieves a host group by ID
message GetHostGroupRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // Include members in response
  optional bool include_members = 2 [json_name = "includeMembers"];
}

message GetHostGroupResponse {
  HostGroup host_group = 1 [json_name = "hostGroup"];
  repeated HostGroupMember members = 2 [json_name = "members"];
}

// ListHostGroupsRequest lists host groups with filtering
message ListHostGroupsRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
  optional int32 page = 2 [json_name = "page"];
  optional int32 page_size = 3 [json_name = "pageSize"];
  optional bool no_paging = 4 [json_name = "noPaging"];
  optional string query = 5 [json_name = "query"];
  repeated string order_by = 6 [json_name = "orderBy"];
  optional string field_mask = 7 [json_name = "fieldMask"];

  // Filter by status
  optional HostGroupStatus status = 10 [json_name = "status"];
}

message ListHostGroupsResponse {
  repeated HostGroup items = 1 [json_name = "items"];
  optional int32 total = 2 [json_name = "total"];
}

// UpdateHostGroupRequest updates a host group
message UpdateHostGroupRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional HostGroup data = 2 [json_name = "data"];

  google.protobuf.FieldMask update_mask = 3 [json_name = "updateMask"];
}

message UpdateHostGroupResponse {
  HostGroup host_group = 1 [json_name = "hostGroup"];
}

// DeleteHostGroupRequest deletes a host group
message DeleteHostGroupRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

// AddHostGroupMemberRequest adds a device to a host group
message AddHostGroupMemberRequest {
  string host_group_id = 1 [
    json_name = "hostGroupId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  string device_id = 2 [
    json_name = "deviceId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional int32 sequence = 3 [json_name = "sequence"];
}

message AddHostGroupMemberResponse {
  HostGroupMember member = 1 [json_name = "member"];
}

// RemoveHostGroupMemberRequest removes a device from a host group
message RemoveHostGroupMemberRequest {
  string host_group_id = 1 [
    json_name = "hostGroupId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  string member_id = 2 [
    json_name = "memberId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

// ListHostGroupMembersRequest lists members of a host group
message ListHostGroupMembersRequest {
  string host_group_id = 1 [
    json_name = "hostGroupId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional int32 page = 2 [json_name = "page"];
  optional int32 page_size = 3 [json_name = "pageSize"];
  optional bool no_paging = 4 [json_name = "noPaging"];
}

message ListHostGroupMembersResponse {
  repeated HostGroupMember items = 1 [json_name = "items"];
  optional int32 total = 2 [json_name = "total"];
}

// UpdateHostGroupMemberRequest updates a member's sequence in a host group
message UpdateHostGroupMemberRequest {
  string host_group_id = 1 [
    json_name = "hostGroupId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  string member_id = 2 [
    json_name = "memberId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional int32 sequence = 3 [json_name = "sequence"];
}

message UpdateHostGroupMemberResponse {
  HostGroupMember member = 1 [json_name = "member"];
}

// ListDeviceHostGroupsRequest lists all groups a device belongs to
message ListDeviceHostGroupsRequest {
  string device_id = 1 [
    json_name = "deviceId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional uint32 tenant_id = 2 [json_name = "tenantId"];
}

message ListDeviceHostGroupsResponse {
  repeated HostGroup groups = 1 [json_name = "groups"];
}

// HostGroupService manages host groups and their device members
service HostGroupService {
  // Create a new host group
  rpc CreateHostGroup(CreateHostGroupRequest) returns (CreateHostGroupResponse) {
    option (google.api.http) = {
      post: "/v1/host-groups"
      body: "*"
    };
  }

  // Get a host group by ID
  rpc GetHostGroup(GetHostGroupRequest) returns (GetHostGroupResponse) {
    option (google.api.http) = {
      get: "/v1/host-groups/{id}"
    };
  }

  // List host groups with filtering
  rpc ListHostGroups(ListHostGroupsRequest) returns (ListHostGroupsResponse) {
    option (google.api.http) = {
      get: "/v1/host-groups"
    };
  }

  // Update a host group
  rpc UpdateHostGroup(UpdateHostGroupRequest) returns (UpdateHostGroupResponse) {
    option (google.api.http) = {
      put: "/v1/host-groups/{id}"
      body: "*"
    };
  }

  // Delete a host group
  rpc DeleteHostGroup(DeleteHostGroupRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/host-groups/{id}"
    };
  }

  // Add a device to a host group
  rpc AddHostGroupMember(AddHostGroupMemberRequest) returns (AddHostGroupMemberResponse) {
    option (google.api.http) = {
      post: "/v1/host-groups/{host_group_id}/members"
      body: "*"
    };
  }

  // Remove a device from a host group
  rpc RemoveHostGroupMember(RemoveHostGroupMemberRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/host-groups/{host_group_id}/members/{member_id}"
    };
  }

  // List members of a host group
  rpc ListHostGroupMembers(ListHostGroupMembersRequest) returns (ListHostGroupMembersResponse) {
    option (google.api.http) = {
      get: "/v1/host-groups/{host_group_id}/members"
    };
  }

  // Update a member in a host group
  rpc UpdateHostGroupMember(UpdateHostGroupMemberRequest) returns (UpdateHostGroupMemberResponse) {
    option (google.api.http) = {
      put: "/v1/host-groups/{host_group_id}/members/{member_id}"
      body: "*"
    };
  }

  // List all groups a device belongs to
  rpc ListDeviceHostGroups(ListDeviceHostGroupsRequest) returns (ListDeviceHostGroupsResponse) {
    option (google.api.http) = {
      get: "/v1/devices/{device_id}/host-groups"
    };
  }
}
